--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,13 +30,12 @@ jobs:
         run: npm install
       - name: build app
         run: npm run build
-#       - name: copy dist file with scp
-#         uses: appleboy/scp-action@v0.0.1
-#         with:
-#           host: ""
-#           username: ""
-#           password: ""
-#           source: ""
-#           target: ""
-#           port: 22
-
+      - name: copy dist file with scp
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_NAME }}
+          password: ${{ secrets.REMOTE_PWD }}
+          source: "docs/"
+          target: ${{ secrets.REMOTE_TARGET }}
+          port: 22
