--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_NAME }}
           password: ${{ secrets.REMOTE_PWD }}
-          source: "docs/"
+          source: "docs/.vuepress/dist/"
           target: ${{ secrets.REMOTE_TARGET }}
           port: 22
