--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,17 +26,31 @@ jobs:
         uses: actions/setup-node@v2.5.1
         with:
           node-version: "14.x"
+      # 安装依赖
       - name: install deps
         run: npm install
+      # 生成静态文件
       - name: build app
         run: npm run build
-      - name: copy dist file with scp
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.REMOTE_HOST }}
-          username: ${{ secrets.REMOTE_NAME }}
-          password: ${{ secrets.REMOTE_PWD }}
-          source: "dist"
-          target: ${{ secrets.REMOTE_TARGET }}
-          port: 22
-          rm: true
+      # 部署到 GitHub Pages
+      - name: Deploy
+        # 使用别人写好的一个 action
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+         with:
+           # 这里的 ACCESS_TOKEN 名字需要和下文中的相对应
+           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+           # 打包后的文件部署到哪个分支上
+           BRANCH: gh-pages
+           # 打包后的文件在哪里
+           FOLDER: docs/.vuepress/dist
+
+#      - name: copy dist file with scp
+#        uses: appleboy/scp-action@master
+#        with:
+#          host: ${{ secrets.REMOTE_HOST }}
+#          username: ${{ secrets.REMOTE_NAME }}
+#          password: ${{ secrets.REMOTE_PWD }}
+#          source: "dist"
+#          target: ${{ secrets.REMOTE_TARGET }}
+#          port: 22
+#          rm: true
