--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
            # 打包后的文件部署到哪个分支上
            BRANCH: gh-pages
            # 打包后的文件在哪里
-           FOLDER: docs/.vuepress/dist
+           FOLDER: dist
 
 #      - name: copy dist file with scp
 #        uses: appleboy/scp-action@master
