--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,13 +44,13 @@ jobs:
           # 打包后的文件在哪里
           FOLDER: dist
 
-#      - name: copy dist file with scp
-#        uses: appleboy/scp-action@master
-#        with:
-#          host: ${{ secrets.REMOTE_HOST }}
-#          username: ${{ secrets.REMOTE_NAME }}
-#          password: ${{ secrets.REMOTE_PWD }}
-#          source: "dist"
-#          target: ${{ secrets.REMOTE_TARGET }}
-#          port: 22
-#          rm: true
+      - name: copy dist file with scp
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_NAME }}
+          password: ${{ secrets.REMOTE_PWD }}
+          source: "dist"
+          target: ${{ secrets.REMOTE_TARGET }}
+          port: 22
+          rm: true
