--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,8 @@ jobs:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_NAME }}
           password: ${{ secrets.REMOTE_PWD }}
-          source: "dist"
-          target: ${{ secrets.REMOTE_TARGET }}
+          source: "dist/*"
+          target: "/root/dpp/BlogSite"
+#          target: ${{ secrets.REMOTE_TARGET }}
           port: 22
           rm: true
