--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm install
       # 生成静态文件
       - name: build app
-        run: npm run build
+        run: npm run build:github
       # 部署到 GitHub Pages
       - name: Deploy
         # 使用别人写好的一个 action
@@ -42,15 +42,17 @@ jobs:
           # 打包后的文件部署到哪个分支上
           BRANCH: gh-pages
           # 打包后的文件在哪里
-          FOLDER: BlogSite
+          FOLDER: dist
 
+      - name: build app
+          run: npm run build:blog
       - name: copy dist file with scp
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_NAME }}
           password: ${{ secrets.REMOTE_PWD }}
-          source: "BlogSite"
+          source: "dist"
           target: "/root/dpp/blog"
 #          target: ${{ secrets.REMOTE_TARGET }}
           port: 22
