--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs",
+    "build:github": "cross-env TARGET_DOMIN=github vuepress build docs",
+    "build:blog": "cross-env TARGET_DOMIN=blog vuepress build docs",
     "commit": "sh ./commit.sh"
   },
   "devDependencies": {
     "vuepress": "^1.9.7"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3"
   }
 }
