--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,31 +58,31 @@ jobs:
           port: 22
           rm: true
 
-  build-github:
-
-    runs-on: ubuntu-latest
-
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      - name: install node.js
-        uses: actions/setup-node@v2.5.1
-        with:
-          node-version: "14.x"
-      # 安装依赖
-      - name: install deps
-        run: npm install
-      # 生成静态文件
-      - name: build app
-        run: npm run build:github
-      # 部署到 GitHub Pages
-      - name: Deploy
-        # 使用别人写好的一个 action
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          # 这里的 ACCESS_TOKEN 名字需要和下文中的相对应
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          # 打包后的文件部署到哪个分支上
-          BRANCH: gh-pages
-          # 打包后的文件在哪里
-          FOLDER: dist
+#  build-github:
+#
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+#      - uses: actions/checkout@v2
+#      - name: install node.js
+#        uses: actions/setup-node@v2.5.1
+#        with:
+#          node-version: "14.x"
+#      # 安装依赖
+#      - name: install deps
+#        run: npm install
+#      # 生成静态文件
+#      - name: build app
+#        run: npm run build:github
+#      # 部署到 GitHub Pages
+#      - name: Deploy
+#        # 使用别人写好的一个 action
+#        uses: JamesIves/github-pages-deploy-action@releases/v3
+#        with:
+#          # 这里的 ACCESS_TOKEN 名字需要和下文中的相对应
+#          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+#          # 打包后的文件部署到哪个分支上
+#          BRANCH: gh-pages
+#          # 打包后的文件在哪里
+#          FOLDER: dist
