--- a/docs/vite/code/vite-react/package.json
+++ b/docs/vite/code/vite-react/package.json
@@ -16,7 +16,9 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "postcss": "^8.4.18",
     "sass": "^1.55.0",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
