--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "commit": "sh ./commit.sh"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "tailwindcss": "^3.2.1",
     "vuepress": "^1.9.7"
   },
   "dependencies": {
