--- a/docs/vite/code/vite-react/package.json
+++ b/docs/vite/code/vite-react/package.json
@@ -10,6 +10,7 @@
     "lint:script": "eslint --fix"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -38,10 +39,6 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^3.0.8",
     "vite-plugin-windicss": "^1.8.8",
-    "windicss": "^3.5.6",
-    "vite-plugin-imagemin": "^0.6.1"
-  },
-  "resolutions": {
-    "bin-wrapper": "npm:bin-wrapper-china"
+    "windicss": "^3.5.6"
   }
 }
